--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="lib/p5.min.js"></script>
+    <script src="lib/p5.dom.min.js"></script>
     <script src="lib/p5.sound.js"></script>
     
     <script src="sketch.js"></script>
