--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="controlsAndInput.js"></script>
     <script src="playbackButton.js"></script>
     <script src="visualisations.js"></script>
+    <script src="ridgePlotSlider.js"></script>
 
+    
     <script src="needles.js"></script>
     <script src="wavepattern.js"></script>
     <script src="spectrum.js"></script>
