--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="spectrum.js"></script>
     <script src="colourripple.js"></script>
     <script src="ridgeplot.js"></script>
+    <script src="objectSky.js"></script>
 
 
 
