--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="controlsAndInput.js"></script>
     <script src="playbackButton.js"></script>
     <script src="visualisations.js"></script>
-    <script src="ridgePlotSlider.js"></script>
+<!--    <script src="ridgePlotSlider.js"></script>-->
 
     
     <script src="needles.js"></script>
