--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src="controlsAndInput.js"></script>
     <script src="playbackButton.js"></script>
     <script src="visualisations.js"></script>
-<!--    <script src="ridgePlotSlider.js"></script>-->
 
     
     <script src="needles.js"></script>
@@ -17,7 +16,7 @@
     <script src="spectrum.js"></script>
     <script src="colourripple.js"></script>
     <script src="ridgeplot.js"></script>
-    <script src="objectSky.js"></script>
+    <script src="object3d.js"></script>
 
 
 
